# TauriTg

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-tdlib.yml  ci.yml  main.yml
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  tdlib.rs
