[package]
name = "telegram-desktop"
version = "0.1.0"
description = "Telegram Desktop Client"
authors = ["you"]
edition = "2021"

[lib]
name = "telegram_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }

[target.x86_64-pc-windows-msvc.dependencies]
tdlib-sys = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]